# slang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example.sl
include/: ast.h  codegen.h  lexer.h  parser.h  utils.h
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
